<resources>
    <string name="app_name">NBAGuessTheScore</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard_upgames">Upcoming Games</string>
    <string name="dashboard_guesshistory">My Guesses</string>
    <string name="dashboard_highscores">High Scores</string>
    <string name="dashboard_gameresults">Game results</string>
    <string name="dashboard_howtoplay">How To Play</string>
    <string name="dashboard_myprofile">My Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
