<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="#C0C0C0"
    tools:context=".activities.DashboardActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="#FFFFFF"
        app:titleTextColor="#FFFFFF">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/upGamesBtn"
                android:layout_width="0dp"
                android:padding="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/dashboard_upgames"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/dashboardTextSize"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/gameResultsBtn"
                android:layout_width="0dp"
                android:padding="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/dashboard_gameresults"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/dashboardTextSize"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/myGuessesBtn"
                android:layout_width="0dp"
                android:padding="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:text="@string/dashboard_guesshistory"
                android:textSize="@dimen/dashboardTextSize"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/highScoresBtn"
                android:layout_width="0dp"
                android:padding="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:text="@string/dashboard_highscores"
                android:textSize="@dimen/dashboardTextSize"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/myProfileBtn"
                android:layout_width="0dp"
                android:padding="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:text="@string/dashboard_myprofile"
                android:textSize="@dimen/dashboardTextSize"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/howToPlayBtn"
                android:layout_width="0dp"
                android:padding="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:text="@string/dashboard_howtoplay"
                android:textSize="@dimen/dashboardTextSize"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>